fixing login spacing
git-svn-id: svn+ssh://rubyforge.org/var/svn/wagn/trunk@499 ec9d8473-2c57-4e18-8d51-132f0e30f32e

--- a/public/stylesheets/page_and_block.css
+++ b/public/stylesheets/page_and_block.css
@@ -9,9 +9,7 @@
   width: 63%;
   margin-bottom: 400px;
 }
-
 #page-right {
-
   position: absolute;
   right: 0.5%;
   width: 35%;
@@ -46,6 +44,7 @@
 #logging {  /* signing in and out */
   position: absolute;
   right: 0.5%;
+  top: 2px;
 }
 /*
 #my-card {
